Openings show well.

--- a/images.qrc
+++ b/images.qrc
@@ -12,5 +12,7 @@
         <file>images/white_pawn.png</file>
         <file>images/white_queen.png</file>
         <file>images/white_rook.png</file>
+        <file>moves.txt</file>
+        <file>moves.xml</file>
     </qresource>
 </RCC>
