--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1480</width>
+    <width>1545</width>
     <height>1024</height>
    </rect>
   </property>
@@ -17,8 +17,8 @@
    <widget class="QGraphicsView" name="graphicsView">
     <property name="geometry">
      <rect>
-      <x>15</x>
-      <y>11</y>
+      <x>460</x>
+      <y>50</y>
       <width>900</width>
       <height>900</height>
      </rect>
@@ -27,7 +27,7 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>820</x>
+      <x>1260</x>
       <y>920</y>
       <width>89</width>
       <height>25</height>
@@ -40,7 +40,7 @@
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>490</x>
+      <x>930</x>
       <y>920</y>
       <width>89</width>
       <height>25</height>
@@ -53,7 +53,7 @@
    <widget class="QPushButton" name="pushButton_3">
     <property name="geometry">
      <rect>
-      <x>380</x>
+      <x>820</x>
       <y>920</y>
       <width>89</width>
       <height>25</height>
@@ -66,7 +66,7 @@
    <widget class="QPushButton" name="pushButton_4">
     <property name="geometry">
      <rect>
-      <x>600</x>
+      <x>1040</x>
       <y>920</y>
       <width>89</width>
       <height>25</height>
@@ -79,7 +79,7 @@
    <widget class="QPushButton" name="pushButton_5">
     <property name="geometry">
      <rect>
-      <x>710</x>
+      <x>1150</x>
       <y>920</y>
       <width>89</width>
       <height>25</height>
@@ -92,15 +92,15 @@
    <widget class="QLabel" name="openingLabel">
     <property name="geometry">
      <rect>
-      <x>940</x>
-      <y>140</y>
-      <width>591</width>
-      <height>311</height>
+      <x>470</x>
+      <y>260</y>
+      <width>881</width>
+      <height>251</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>36</pointsize>
+      <pointsize>42</pointsize>
      </font>
     </property>
     <property name="text">
@@ -113,15 +113,17 @@
    <widget class="QLabel" name="variantLabel">
     <property name="geometry">
      <rect>
-      <x>940</x>
-      <y>500</y>
-      <width>491</width>
+      <x>480</x>
+      <y>550</y>
+      <width>831</width>
       <height>191</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>24</pointsize>
+      <pointsize>28</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
      </font>
     </property>
     <property name="text">
@@ -137,19 +139,34 @@
    <widget class="QLabel" name="ecoLabel">
     <property name="geometry">
      <rect>
-      <x>940</x>
-      <y>30</y>
-      <width>411</width>
-      <height>121</height>
+      <x>460</x>
+      <y>50</y>
+      <width>101</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>40</pointsize>
+      <pointsize>18</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
      </font>
     </property>
     <property name="text">
      <string>Eco</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_6">
+    <property name="geometry">
+     <rect>
+      <x>710</x>
+      <y>920</y>
+      <width>89</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Animate</string>
     </property>
    </widget>
   </widget>
@@ -158,7 +175,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1480</width>
+     <width>1545</width>
      <height>22</height>
     </rect>
    </property>
